--- a/ci/tasks/prepare-release.yml
+++ b/ci/tasks/prepare-release.yml
@@ -8,13 +8,17 @@ image_resource:
 
 inputs:
   - name: bosh-src
-  - name: release-branch
+  - name: bosh-src-latest
   - name: bosh-cli
   - name: version
 
 outputs:
-  - name: bosh-src-with-release-commit
+  - name: bosh-src-latest-with-release-commit
   - name: release-tarball
+
+params:
+  BLOBSTORE_ACCESS_KEY_ID: replace-me
+  BLOBSTORE_SECRET_ACCESS_KEY: replace-me
 
 run:
   path: bosh-src/ci/tasks/prepare-release.sh
