Change version resource name to match master changes
Signed-off-by: Gaurab Dey <gdey@pivotal.io>

--- a/ci/pipeline-external-cpi-refactor.yml
+++ b/ci/pipeline-external-cpi-refactor.yml
@@ -144,7 +144,7 @@ jobs:
       - integration-postgres-gocli-sha2
       - upgrade-tests
     - get: bosh-cli
-    - get: candidate-version
+    - get: version
       resource: candidate-version-v2
       params:
         bump: major
