--- a/jobs/blobstore/templates/bpm.yml
+++ b/jobs/blobstore/templates/bpm.yml
@@ -6,6 +6,9 @@ blobstore_config = {
   "args" => ["-c", "/var/vcap/jobs/blobstore/config/nginx.conf"],
   "persistent_disk" => true,
   "ephemeral_disk" => true,
+  "hooks" => {
+    "pre_start" => "/var/vcap/jobs/blobstore/bin/pre-start",
+  }
 }
 
 config = {
