Use our bosh-deployment to deploy acceptance env
- overrides the bosh-deployment that bbl would use
- we were getting failures because it tried to use an older version of
our runtime-config for bosh-dns

[#160499005](https://www.pivotaltracker.com/story/show/160499005)

Co-authored-by: Josh Russett <jrussett@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1254,6 +1254,7 @@ jobs:
         - get: bbl-state
           resource: acceptance-env-state
         - get: zookeeper-release
+        - get: bosh-deployment
         - get: stemcell
           resource: google-kvm-ubuntu-trusty
         - get: bosh-src
