Update bosh/bosh-load-test-garden to successfully start mysql
[#155054812](https://www.pivotaltracker.com/story/show/155054812)

Co-authored-by: James Myers <jmyers@pivotal.io>

--- a/ci/docker/bosh-load-tests-garden/Dockerfile
+++ b/ci/docker/bosh-load-tests-garden/Dockerfile
@@ -7,4 +7,7 @@ RUN echo 'mysql-server mysql-server/root_password_again password password' | deb
 RUN apt-get update && apt-get install -y mysql-server ruby-dev build-essential && rm -rf /var/lib/apt/lists/*
 
 RUN sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/my.cnf && \
+  echo "[mysqld]" >> /etc/mysql/my.cnf && \
   echo "max_connections = 400" >> /etc/mysql/my.cnf
+
+RUN chown -R mysql:mysql /var/lib/mysql /var/run/mysqld
