Give blobstore performance tests retries
[#161005902](https://www.pivotaltracker.com/story/show/161005902)

Co-authored-by: Belinda Liu <bliu@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -315,6 +315,7 @@ jobs:
       - task: test
         privileged: true
         file: bosh-src/ci/tasks/test-blobstore-load.yml
+        attempts: 3
 
   - name: integration-postgres-gocli-sha2
     public: true
