--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -66,3 +66,6 @@ Style/TrailingCommaInHashLiteral:
 Style/TrailingCommaInArguments:
   Enabled: true
   EnforcedStyleForMultiline: comma
+
+Style/MultilineBlockChain:
+  Enabled: false
