Reintroduce compile job for trusty
Co-authored-by: Max Petersen <mpetersen@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -16,6 +16,7 @@ groups:
       - load-tests-mysql
       - fuzz-tests
       - candidate-release
+      - compile-bosh-dev-release-trusty
       - compile-bosh-dev-release-xenial
       - bats-centos
       - bats-ubuntu-trusty
@@ -650,6 +651,25 @@ jobs:
       params:
         file: "compiled-release/*.tgz"
 
+  - name: compile-bosh-dev-release-trusty
+    plan:
+    - aggregate:
+      - get: bosh-src
+      - get: release
+        resource: bosh-candidate-release-tarballs
+        passed:
+        - candidate-release
+        trigger: true
+      - get: stemcell
+        resource: warden-ubuntu-trusty
+        trigger: true
+    - task: export-release
+      file: bosh-src/ci/tasks/export-release.yml
+      privileged: true
+    - put: bosh-compiled-candidate-trusty
+      params:
+        file: "compiled-release/*.tgz"
+
   - name: bats-centos
     serial: true
     plan:
@@ -848,10 +868,10 @@ jobs:
         passed:
         - candidate-release
       - get: bosh-release
-        resource: bosh-compiled-candidate-xenial
+        resource: bosh-compiled-candidate-trusty
         trigger: true
         passed:
-        - compile-bosh-dev-release-xenial
+        - compile-bosh-dev-release-trusty
     - do:
       - put: brats-terraform
         attempts: 2
@@ -1444,6 +1464,14 @@ resources:
       access_key_id: ((bosh-compiled-releases-aws-access-key-id))
       secret_access_key: ((bosh-compiled-releases-aws-secret-access-key))
       regexp: "bosh-(\\d+).*xenial.*.tgz"
+
+  - name: bosh-compiled-candidate-trusty
+    type: s3
+    source:
+      bucket: "bosh-compiled-candidate-tarballs"
+      access_key_id: ((bosh-compiled-releases-aws-access-key-id))
+      secret_access_key: ((bosh-compiled-releases-aws-secret-access-key))
+      regexp: "bosh-(\\d+).*trusty.*.tgz"
 
   - name: bbr-sdk-release
     type: bosh-io-release
