Update gnatsd to 1.3.0
[#161490609](https://www.pivotaltracker.com/story/show/161490609)

Signed-off-by: Denise Yu <dyu@pivotal.io>

--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -10,6 +10,10 @@ gnatsd/gnatsd-0.9.6-bosh.13-linux-amd64:
   size: 9513901
   object_id: 6f71e068-e47d-4840-463c-47d313e1a5bd
   sha: 7d720bbf685c508c0fd566769253f91b0c7269e9
+gnatsd/gnatsd-1.3.0-bosh.2-linux-amd64:
+  size: 10471093
+  object_id: cbc9d252-ca0c-4120-6f36-1a6e856b1f03
+  sha: add5c727ae5853d41f5eb1d880bfbb26245588aa
 mysql/mariadb-connector-c-3.0.3-src.tar.gz:
   size: 666928
   object_id: 0d20e9e3-1a7d-4872-6ea3-28246c579ca8
