Add the appropriate mock for global config
Also update a mock director config file.

[#161589765](https://www.pivotaltracker.com/story/show/161589765)

Signed-off-by: Miguel Verissimo <mverissimo@pivotal.io>

--- a/src/bosh-director/spec/assets/test-director-config.yml
+++ b/src/bosh-director/spec/assets/test-director-config.yml
@@ -65,6 +65,9 @@ agent:
       - provider: 'local'
         options:
           'blobstore_path': /path/to/blobstore
+cpi:
+  max_supported_api_version: 2
+  preferred_api_version: 2
 
 nats:
   server_ca_path: '/path/to/server_ca_path'
