Use namespaced folder for candidate release
[#161484974](https://www.pivotaltracker.com/story/show/161484974)

Co-authored-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1358,7 +1358,7 @@ resources:
       bucket: ((candidate_release_bucket))
       access_key_id: ((candidate_release_access_key_id))
       secret_access_key: ((candidate_release_secret_access_key))
-      versioned_file: "bosh-dev-release.tgz"
+      versioned_file: 268.2.x/bosh-dev-release.tgz
 
   - name: bosh-compiled-candidate-xenial
     type: s3
