Show director stemcell os and version info info
This change shows the os and version of the director stemcell as parsed
from the `/var/vcap/bosh/etc/stemcell_version` and the OS.

[#159937907](https://www.pivotaltracker.com/story/show/159937907)

Co-authored-by: Joshua Aresty <joshua.aresty@emc.com>
Co-authored-by: Max Petersen <mpetersen@pivotal.io>

--- a/jobs/director/templates/bpm.yml
+++ b/jobs/director/templates/bpm.yml
@@ -5,6 +5,9 @@ director_config = {
   "executable" => "/var/vcap/jobs/director/bin/director",
   "ephemeral_disk" => true,
   "persistent_disk" => true,
+  "unsafe" => {
+    "unrestricted_volumes" => [{"path" => "/var/vcap/bosh/etc"}]
+  }
 }
 
 nginx_config = {
