--- a/scripts/create-release-branch-ops.yml
+++ b/scripts/create-release-branch-ops.yml
@@ -2,27 +2,6 @@
   path: /jobs/name=deploy-acceptance-env
 
 - type: remove
-  path: /jobs/name=load-tests-postgres
-
-- type: remove
-  path: /jobs/name=load-tests-mysql
-
-- type: remove
-  path: /jobs/name=legacy-load-tests-postgres
-
-- type: remove
-  path: /jobs/name=legacy-load-tests-mysql
-
-- type: remove
-  path: /groups/name=load
-
-- type: remove
-  path: /resources/name=bosh-load-tests-workspace
-
-- type: remove
-  path: /resources/name=load-tests-interval
-
-- type: remove
   path: /resources/name=acceptance-env-state
 
 - type: remove
@@ -46,12 +25,10 @@
       - integration-db-tls-postgres
       - integration-db-tls-postgres-hotswap
       - integration-db-tls-mysql
-      - load-tests-postgres
-      - load-tests-mysql
-      - legacy-load-tests-postgres
-      - legacy-load-tests-mysql
       - fuzz-tests
       - candidate-release
+      - compile-bosh-dev-release-trusty
+      - compile-bosh-dev-release-xenial
       - bats-centos
       - bats-ubuntu-trusty
       - bats-ubuntu-xenial
@@ -69,136 +46,30 @@
   value: ((branchname))
 
 - type: replace
-  path: /resources/name=candidate-version/source/initial_version?
-  value: ((branchver)).0.0
+  path: /resources/name=version/source/initial_version?
+  value: ((branchver)).0
 
 - type: replace
-  path: /resources/name=candidate-version/source/key?
+  path: /resources/name=version/source/key?
   value: ((branchver)).x/version
 
 - type: replace
   path: /resources/name=bosh-candidate-release-tarballs/source/versioned_file
   value: ((branchname))/bosh-dev-release.tgz
 
-- type: replace
-  path: /groups/name=bosh/jobs/-
-  value: finalize-bosh-release
-
-- type: replace
-  path: /groups/name=bosh/jobs/-
-  value: export-final-release
-
-- type: replace
-  path: /groups/name=bosh/jobs/-
-  value: bump-candidate-minor
-
-- type: replace
-  path: /groups/name=finalize?/jobs
-  value:
-  - finalize-bosh-release
-  - export-final-release
+- type: remove
+  path: /jobs/name=bump-major
 
 - type: remove
-  path: /jobs/name=bump-candidate-major
-
-- type: remove
-  path: /resources/name=latest-major-version
-
-- type: remove
-  path: /groups/name=version
+  path: /jobs/name=bump-minor
 
 - type: replace
-  path: /jobs/-
+  path: /groups/name=PM?
   value:
-    name: finalize-bosh-release
-    serial: true
-    plan:
-      - aggregate:
-        - get: bosh-src
-          passed:
-            - bats-centos
-            - bats-ubuntu-trusty
-            - bats-ubuntu-xenial
-        - get: bosh-master
-        - get: bosh-dev-release
-          resource: bosh-candidate-release-tarballs
-          passed:
-            - bats-centos
-            - bats-ubuntu-trusty
-            - bats-ubuntu-xenial
-        - get: bosh-cli
-        - get: candidate-version
-          params:
-            bump: minor
-            final: true
-      - task: promote-release
-        file: bosh-src/ci/tasks/finalize-bosh-release.yml
-        params:
-          BLOBSTORE_ACCESS_KEY_ID: ((bosh_release_access_key_id))
-          BLOBSTORE_SECRET_ACCESS_KEY: ((bosh_release_secret_access_key))
-      - put: candidate-version
-        params:
-          file: bumped-candidate-version/version
-      - put: bosh-master
-        params:
-          repository: bosh-master-with-final
-          rebase: true
-      - put: bosh-src
-        params:
-          repository: bosh-src-with-bumped-version
-          tag: bosh-src-with-bumped-version-tag/tag-name
-          annotate: bosh-src-with-bumped-version-tag/annotate-msg
-          rebase: true
-
-- type: replace
-  path: /jobs/-
-  value:
-    name: export-final-release
-    serial: true
-    plan:
-    - aggregate:
-      - get: bosh-master
-      - get: candidate-version
-        passed: [finalize-bosh-release]
-        trigger: true
-      - get: warden-ubuntu-xenial
-        passed: [brats-ubuntu-xenial, bbr-ubuntu-xenial]
-        trigger: true
-    - task: export-final-release
-      file: bosh-master/ci/tasks/export-final-release.yml
-      privileged: true
-      input_mapping:
-        version: candidate-version
-        stemcell: warden-ubuntu-xenial
-        bosh-src: bosh-master
-    - task: push-bosh-compiled-releases
-      file: bosh-master/ci/tasks/push-bosh-compiled-release.yml
-      input_mapping:
-        bosh-src: bosh-master
-      params:
-        AWS_ACCESS_KEY_ID: ((bosh-compiled-releases-aws-access-key-id))
-        AWS_SECRET_ACCESS_KEY: ((bosh-compiled-releases-aws-secret-access-key))
-        git_private_key: ((bosh-compiled-releases-index-deploy-key))
-
-- type: replace
-  path: /jobs/-
-  value:
-    name: bump-candidate-minor
-    serial: true
-    plan:
-    - put: candidate-version
-      params:
-        bump: minor
-
-- type: replace
-  path: /resources/-
-  value:
-    name: bosh-master
-    type: git
-    source:
-      uri: ((bosh_src_url))
-      branch: master
-      private_key: ((github_deployment_key))
+    name: PM
+    jobs:
+      - bump-patch
+      - finalize-release
 
 - type: replace
   path: /resources/name=warden-ubuntu-xenial/source/version_family?
