--- a/ci/docker/pipeline.yml
+++ b/ci/docker/pipeline.yml
@@ -15,6 +15,7 @@ groups:
   - build-main-mysql-5.7
   - build-main-mysql-5.6
   - build-main-mysql-5.5
+  - build-main-postgres-10
   - build-main-postgres-9.6
   - build-main-postgres-9.5
   - build-main-postgres-9.4
@@ -97,6 +98,22 @@ jobs:
           build: "bosh-src/ci/docker/main-postgres"
           build_args:
             DB_VERSION: "9.6"
+        get_params:
+          skip_download: true
+
+  - name: build-main-postgres-10
+    public: true
+    serial: true
+    plan:
+      - get: bosh-src
+        trigger: true
+        passed:
+          - "build-main-base"
+      - put: main-postgres-10
+        params:
+          build: "bosh-src/ci/docker/main-postgres"
+          build_args:
+            DB_VERSION: "10"
         get_params:
           skip_download: true
 
@@ -380,6 +397,14 @@ resources:
     type: docker-image
     source:
       repository: bosh/main-postgres-9.6
+      email: ((dockerhub_email))
+      username: ((dockerhub_username))
+      password: ((dockerhub_password))
+
+  - name: main-postgres-10
+    type: docker-image
+    source:
+      repository: bosh/main-postgres-10
       email: ((dockerhub_email))
       username: ((dockerhub_username))
       password: ((dockerhub_password))
