--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: bosh/main-postgres-9.4
+    repository: bosh/main
 
 inputs:
 - name: bosh-src
