Use bosh-main-postgres-9.4 for postgres integration tests
Broken by shared docker image changes in 93b53cfaaf17c22256585d3fa0a5f625bf75e8f5

Co-authored-by: Danny Berger <dberger@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -291,12 +291,14 @@ jobs:
           trigger: true
         - get: bosh-agent
         - get: integration-tests-parallel-runtime
+        - get: bosh-main-postgres-9.4
 
       - <<: *install-dependencies
 
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
+        image: bosh-main-postgres-9.4
         tags: ["bosh-integration-1"]
         params:
           DB:           postgresql
@@ -347,12 +349,14 @@ jobs:
           trigger: true
         - get: bosh-agent
         - get: integration-tests-parallel-runtime
+        - get: bosh-main-postgres-9.4
 
       - <<: *install-dependencies
 
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
+        image: bosh-main-postgres-9.4
         tags: ["bosh-integration-3"]
         params:
           DB:           postgresql
@@ -376,12 +380,14 @@ jobs:
           trigger: true
         - get: bosh-agent
         - get: integration-tests-parallel-runtime
+        - get: bosh-main-postgres-9.4
 
       - <<: *install-dependencies
 
       - task: tests
         privileged: true
         file: bosh-src/ci/tasks/test-integration-gocli.yml
+        image: bosh-main-postgres-9.4
         tags: ["bosh-integration-4"]
         params:
           DB:           postgresql
@@ -449,10 +455,12 @@ jobs:
         - get: bosh-cli
           trigger: true
         - get: bosh-agent
+        - get: bosh-main-postgres-9.4
       - aggregate:
         - task: upgrade-with-postgres
           privileged: true
           file: bosh-src/ci/tasks/test-upgrade.yml
+          image: bosh-main-postgres-9.4
           tags: ["bosh-integration-6"]
           params:
             DB: postgresql
