--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -231,6 +231,7 @@ jobs:
       trigger: true
     - get: bosh-agent
     - get: integration-tests-parallel-runtime
+    - get: bosh-main-postgres-9.4
   - config:
       image_resource:
         source:
@@ -267,6 +268,7 @@ jobs:
         path: /bin/bash
     task: install-dependencies
   - file: bosh-src/ci/tasks/test-integration-gocli.yml
+    image: bosh-main-postgres-9.4
     params:
       DB: postgresql
       SHA2_MODE: true
@@ -348,6 +350,7 @@ jobs:
       trigger: true
     - get: bosh-agent
     - get: integration-tests-parallel-runtime
+    - get: bosh-main-postgres-9.4
   - config:
       image_resource:
         source:
@@ -384,6 +387,7 @@ jobs:
         path: /bin/bash
     task: install-dependencies
   - file: bosh-src/ci/tasks/test-integration-gocli.yml
+    image: bosh-main-postgres-9.4
     params:
       DB: postgresql
       DB_TLS: true
@@ -408,6 +412,7 @@ jobs:
       trigger: true
     - get: bosh-agent
     - get: integration-tests-parallel-runtime
+    - get: bosh-main-postgres-9.4
   - config:
       image_resource:
         source:
@@ -444,6 +449,7 @@ jobs:
         path: /bin/bash
     task: install-dependencies
   - file: bosh-src/ci/tasks/test-integration-gocli.yml
+    image: bosh-main-postgres-9.4
     params:
       DB: postgresql
       DB_TLS: true
@@ -543,8 +549,10 @@ jobs:
     - get: bosh-cli
       trigger: true
     - get: bosh-agent
+    - get: bosh-main-postgres-9.4
   - aggregate:
     - file: bosh-src/ci/tasks/test-upgrade.yml
+      image: bosh-main-postgres-9.4
       params:
         DB: postgresql
       privileged: true
