Make integration-tests-parallel-runtime optional
In order to run integration tests in various pipelines with fewer
dependencies, we are making this input optional.

Co-authored-by: Joshua Aresty <joshua.aresty@emc.com>

[#162669880](https://www.pivotaltracker.com/story/show/162669880)

--- a/ci/tasks/test-integration-gocli.yml
+++ b/ci/tasks/test-integration-gocli.yml
@@ -11,6 +11,7 @@ inputs:
 - name: bosh-cli
 - name: bosh-agent
 - name: integration-tests-parallel-runtime
+  optional: true
 
 outputs:
 - name: parallel-runtime-log
