--- a/config/final.yml
+++ b/config/final.yml
@@ -1,6 +1,6 @@
---- 
+---
 final_name: bosh
 blobstore:
-  provider: s3
-  options: 
-    bucket_name: blob.cfblob.com
+  provider: gcs
+  options:
+    bucket_name: bosh-release-blobs
