Change fuzz tests interval to 1h
[finishes #163231300](https://www.pivotaltracker.com/story/show/163231300)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1071,7 +1071,7 @@ resources:
   - name: fuzz-interval-trigger
     type: time
     source:
-      interval: 15m
+      interval: 1h
 
   - name: bosh-cli
     type: s3
