Consolidate metrics brats tes into a single test
This change updates the metrics tests to all be tested in a single It
block. These tests are expensive, so we should only need to deploy the
inner bosh deployment once.

[#163241835](https://www.pivotaltracker.com/story/show/163241835)

Co-authored-by: James Myers <jmyers@pivotal.io>

--- a/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/ops-enable-metrics.yml
+++ b/src/go/src/github.com/cloudfoundry/bosh-release-acceptance-tests/assets/ops-enable-metrics.yml
@@ -8,3 +8,7 @@
   path: /instance_groups/name=bosh/properties/director/nginx?
   value:
     enable_metrics_endpoint: true
+
+- type: replace
+  path: /instance_groups/name=bosh/properties/nats/enable_metrics_endpoint?
+  value: true
